ΜΑΘΗΜΑΤΑ/ΗΥ-340/PROJECTS/Compiler_Exec/examples/phase_2/Errors/Error6.asc
//
i = 8;
x = 10;
y = 30;

function foo(x,y){
    x = i;     
    ::y = x;  

    function g() {
		::x = x;   //Error Cannot access x inside g
		::y = y;   //Error Cannot access x inside g
    }
}
